welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:2: error: Missing closing brace `}' assumed here
override def run() {
^Array2:2: error: expected start of definition
override def run() {
         ^Array2:4: error: Missing closing brace `}' assumed here
var n =  (getMondeHauteur()) ;
^Array2:5: error: expected class or object definition
var T = new Array[Color](n);
^Array2:6: error: expected class or object definition
T(0) = getCouleurSol();
^Array2:7: error: expected class or object definition
for (i <- 1 to n-1) {
^Array2:12: error: expected class or object definition
for (j <- 0 to n-2) {
^Array2:36: error: expected class or object definition
for (j <- 0 to n-2) {
^